--- a/package.json
+++ b/package.json
@@ -7,8 +7,19 @@
     "build": "remix build",
     "dev": "remix watch",
     "postinstall": "remix setup node",
-    "start": "cross-env NODE_ENV=production node dist/server/index.js",
-    "start:dev": "cross-env NODE_ENV=development ts-node --project tsconfig.server.json server/index.ts"
+    "start": "cross-env NODE_ENV=production node server/build/index.js",
+    "start:dev": "cross-env NODE_ENV=development ts-node --project tsconfig.server.json server/index.ts",
+    "lint": "eslint --cache --ext .ts,.tsx ./app",
+    "format": "prettier --write ./app/**/**/*.{ts,tsx}",
+    "prepare": "husky install"
+  },
+  "sideEffects": false,
+  "lint-staged": {
+    "*.{tx,tsx}": [
+      "organize-imports-cli",
+      "eslint --cache --fix",
+      "prettier --write"
+    ]
   },
   "dependencies": {
     "@remix-run/express": "^1.1.3",
@@ -28,11 +39,28 @@
     "@types/morgan": "^1.9.3",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.8.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-react-app": "^7.0.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "husky": ">=6",
+    "lint-staged": ">=10",
+    "organize-imports-cli": "^0.9.0",
+    "prettier": "^2.5.1",
     "ts-node": "^10.5.0",
     "typescript": "^4.1.2"
   },
   "engines": {
     "node": ">=14"
-  },
-  "sideEffects": false
+  }
 }
