--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "license": "",
   "scripts": {
     "build": "remix build",
-    "dev": "remix watch",
+    "dev:client": "remix watch",
+    "dev:server": "nodemon --watch 'server/index.ts' --exec cross-env NODE_ENV=development ts-node --project tsconfig.server.json server/index.ts",
+    "dev": "concurrently \"yarn dev:client\" \"yarn dev:server\"",
     "postinstall": "remix setup node",
     "start": "cross-env NODE_ENV=production node server/build/index.js",
-    "start:dev": "cross-env NODE_ENV=development ts-node --project tsconfig.server.json server/index.ts",
     "lint": "eslint --cache --ext .ts,.tsx ./app",
     "format": "prettier --write ./app/**/**/*.{ts,tsx}",
     "prepare": "husky install"
@@ -42,6 +43,7 @@
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
     "babel-eslint": "^10.1.0",
+    "concurrently": "^7.0.0",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-react-app": "^7.0.0",
@@ -55,6 +57,7 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "husky": ">=6",
     "lint-staged": ">=10",
+    "nodemon": "^2.0.15",
     "organize-imports-cli": "^0.9.0",
     "prettier": "^2.5.1",
     "ts-node": "^10.5.0",
