--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "remix-app-template",
+  "name": "remix-typescript-app-template",
   "description": "",
   "license": "",
   "scripts": {
